src/objects/Vendor_Assignment_History__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Assignment History</relationshipLabel>
        <relationshipName>Vendor_Assignment_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_From__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Create_By__c</fullName>
        <label>Legacy Create By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Create_Date__c</fullName>
        <label>Legacy Create Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Update_By__c</fullName>
        <label>Legacy Update By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Update_Date__c</fullName>
        <label>Legacy Update Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription History</label>
        <referenceTo>Subscription_History__c</referenceTo>
        <relationshipLabel>Vendor Assignment History</relationshipLabel>
        <relationshipName>Vendor_Assignment_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription ID</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>Vendor Assignment History</relationshipLabel>
        <relationshipName>Vendor_Assignment_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription (Vendor)</label>
        <referenceTo>Subscription_Vendor__c</referenceTo>
        <relationshipLabel>Vendor Assignment History</relationshipLabel>
        <relationshipName>Vendor_Assignment_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vendor Assignment History</label>
    <nameField>
        <label>Vendor Assignement History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Assignment History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>